# ypf-fleet-fuel-distributed-system

./: .gitignore  Cargo.toml  README.md  a.md  clippy.toml
client/: Cargo.toml
client/src/: cli.rs  commands.rs  main.rs
client/src/administrator/: administrator.rs  cli.rs  command.rs  main.rs
client/src/node_client/: main.rs  node_client.rs
common/: Cargo.toml
server/: Cargo.toml
server/src/: connection.rs  connection_manager.rs  errors.rs  leader.rs  main.rs  node.rs  node_message.rs  operation.rs  replica.rs  serial_error.rs
server/src/actors/: account.rs  actor_router.rs  card.rs  leader_card.rs  messages.rs  mod.rs  subscriber.rs  types.rs
server/src/domain/: mod.rs  operation.rs
server/src/node/: connection_manager.rs  database.rs  leader.rs  message.rs  mod.rs  node.rs  node_message.rs  node_role.rs  operation.rs  pending_operation.rs  pending_operatoin.rs  replica.rs  station.rs  test.rs  utils.rs
server/src/node/actors/: account.rs  actor_router.rs  card.rs  messages.rs  mod.rs
server/src/node/election/: bully.rs  mod.rs
server/src/node/network/: acceptor.rs  active_helpers.rs  connection.rs  mod.rs
server/src/node/network/handler/: handler.rs  receiver.rs  sender.rs
server/src/node/network/manager/: active_monitor.rs  manager.rs  mod.rs
server/src/node/network/manager/handler/: sender.rs
server/src/node/network/serialization/: deserialization.rs  helpers.rs  mod.rs  protocol.rs  serialization.rs
server/src/node/network/serials/: protocol.rs
server/src/node/network/serials/deserialization/: message.rs  operation.rs
(+74 files in other folders)
